# plaid_dashboard

./: package.json  pnpm-lock.yaml  tailwind.config.ts
.cache/: account_data.json
app/: globals.css  page.tsx
app/api/parquet/: route.ts
app/transactions/: page.tsx
components/balance/: AccountCard.tsx  AccountFilterPanel.tsx  AccountsGrid.tsx  BalancesPage.tsx  HistoricalBalanceChart.tsx  NetWorthSummary.tsx  TimePeriodSelector.tsx
components/layout/: DashboardLayout.tsx  MainNav.tsx  NavigationBar.tsx
components/transaction/: CorrectionModal.tsx  CorrectionsView.tsx  SpendingTrends.tsx  TransactionFilterBar.tsx  TransactionTable.tsx  TransactionsPage.tsx
components/ui/: Badge.tsx  Card.tsx
contexts/: ThemeContext.tsx
hooks/: useBalanceData.ts  useCorrections.ts  useHistoricalData.ts  useSpendingTrends.ts  useTransactionData.ts
lib/: categories.ts
lib/s3/: getCurrentAccountTable.ts  loadCurrentS3Parquet.ts
python-api/: api.py  data_models.py  main.py  pyproject.toml  test.ipynb  test.py  test_api.py  test_corrections.py  transactions.csv
scripts/: run.ts
types/: finance.ts
