[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "boto3>=1.42.26",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
